<resources>
    <string name="app_name">Roomates</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Don\'t have an account? Sign Up</string>
    <string name="login_in_to_account">Have an account? Sign In</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">Type a message</string>

</resources>