<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AED6DC"
    android:overScrollMode="never"
    android:padding = "@dimen/_24sdp"
    android:scrollbars = "none"
    tools:context=".activities.SignUpActivity">

    <!--    Sign up page Layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <!--    Sign up page heading "Create new acc" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Create new account"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold">
        </TextView>
        <!--    Sign up page Profile image holder -->
        <FrameLayout
            android:id = "@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <com.makeramen.roundedimageview.RoundedImageView
                android:id = "@+id/imageProfile"
                android:layout_height="@dimen/_80sdp"
                android:layout_width="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType = "centerCrop"
                app:riv_oval="true"
            />
            <TextView
                android:id = "@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10sdp"
                />
        </FrameLayout>
        <!--    Sign up page "Name" editable text-->
        <EditText
            android:id = "@+id/inputName"
            android:layout_width= "match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            />
        <!--    Sign up page "Email" editable text-->
        <EditText
            android:id = "@+id/inputEmail"
            android:layout_width= "match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            />
        <!--    Sign up page "Password" editable text-->
        <EditText
            android:id = "@+id/inputPassword"
            android:layout_width= "match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            />
        <EditText
            android:id = "@+id/inputConfirmPassword"
            android:layout_width= "match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/secondary_text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">


            <com.google.android.material.button.MaterialButton
            android:id = "@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text = "@string/sign_up"
            android:textColor="@color/white"
            android:textSize = "@dimen/_13ssp"
            android:textStyle="bold"
                android:backgroundTint="#F4898B"
            />
            <ProgressBar
                android:id = "@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>
        </FrameLayout>
        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text = "@string/login_in_to_account"
            android:textColor = "@color/primary_dark"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            />
    </LinearLayout>
</ScrollView>